<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/textInputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/textInputTitleHint"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/editInput"
            android:hint="@string/editInputHint"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:drawablePadding="20dp"
            android:background="#C0C0C0"
            android:inputType="textMultiLine"
            android:textSize="14sp"
            android:scrollbars="vertical"
            android:autofillHints="" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/textPointOutputTitleHint"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="2dp"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/textSatEleTitleHint"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textSatEleOutput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#C0C0C0"
                            android:gravity="center_vertical"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/textSatAziTitleHint"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textSatAziOutput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#C0C0C0"
                            android:gravity="center_vertical"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/textSatHorTitleHint"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textSatHorOutput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#C0C0C0"
                            android:gravity="center_vertical"
                            android:textSize="14sp" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="2dp"
                        android:orientation="vertical" >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/textPhoEleTitleHint"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textPhoEleOutput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#C0C0C0"
                            android:gravity="center_vertical"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/textPhoAziTitleHint"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textPhoAziOutput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#C0C0C0"
                            android:gravity="center_vertical"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="10dp"
                            android:hint="@string/textPhoHorTitleHint"
                            android:textSize="12sp" />

                        <TextView
                            android:id="@+id/textPhoHorOutput"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#C0C0C0"
                            android:gravity="center_vertical"
                            android:textSize="14sp" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="2dp"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/textModemOutputTitleHint"
                    android:textSize="12sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="2dp"
                    android:orientation="vertical" >

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/textServStatOutputTitleHint"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textServStatOutput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#C0C0C0"
                        android:gravity="center_vertical"
                        android:textSize="14sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:hint="@string/textSigLvlOutputTitleHint"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textSigLvlOutput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#C0C0C0"
                        android:gravity="center_vertical"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/textOutputTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/textOutputTitleHint"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/textOutput"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:hint="@string/textOutputHint"
            android:background="#C0C0C0"
            android:gravity="center_vertical"
            android:scrollbars="vertical"
            android:textSize="14sp" />

        <Button
            android:id="@+id/btnClearButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnClearButton"
            android:layout_marginBottom="30dp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSatSupportType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnSatSupportType"
            android:textSize="11sp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSatSimCards"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnSatSimCards"
            android:textSize="11sp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSatSetSlot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnSatSetSlot"
            android:textSize="11sp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSatPointing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnSatPointing"
            android:textSize="11sp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSatModem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnSatModem"
            android:textSize="11sp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSatEnabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnSatEnabled"
            android:textSize="11sp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSatMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnSatMessage"
            android:textSize="11sp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSatUnModem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnSatUnModem"
            android:textSize="11sp"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/btnSatUnPointing"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:text="@string/btnSatUnPointing"
            android:textSize="11sp"
            android:layout_marginBottom="30dp"
            android:textAllCaps="false" />

    </LinearLayout>
</ScrollView>